<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#63B8FF"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#7f7fff"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtViewNewsForDiaryEntry"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_weight="1.11"
            android:background="#7f7fff"
            android:paddingBottom="4dp"
            android:paddingLeft="50dp"
            android:paddingTop="10dp"
            android:text="@string/extraversion_facets"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="23sp" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/X"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="6dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtViewFacet0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:padding="20dp"
        android:textSize="20sp"
        android:text="@string/facet_0" />

    <TextView
        android:id="@+id/txtViewFacet1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="20dp"
        android:textSize="20sp"
        android:text="@string/facet_1" />

    <TextView
        android:id="@+id/txtViewFacet2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="20dp"
        android:textSize="20sp"
        android:text="@string/facet_2" />

    <TextView
        android:id="@+id/txtViewFacet3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="20dp"
        android:textSize="20sp"
        android:text="@string/facet_3" />

    <TextView
        android:id="@+id/txtViewFacet4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="20dp"
        android:textSize="20sp"
        android:text="@string/facet_4" />

</LinearLayout>

